[package]
name = "redis"
version = "0.1.0"
authors = ["Ivan Lazarević"]
edition = "2021"

[dependencies]
anyhow = "1"
bytes = "1"
clap = { version = "4.5.32", features = ["derive"] }
env_logger = "0.11.7"
log = "0.4.26"
memchr = "2.7.4"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
#tokio-util = { version = "0.7.14", features = ["codec"] }
